<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_item"
                android:textSize="@dimen/first_item"
                android:textStyle="italic|bold"
                android:layout_marginBottom="20dp"
               />

            <EditText
                android:id="@+id/grocery_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:hint="@string/hint_item"
                android:layout_marginBottom="15dp"
                android:textSize="@dimen/first_item"
                />

            <EditText
                android:id="@+id/groceryQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/grocery_item"
                android:hint="@string/hint_quantity"
                android:inputType="number"
                android:layout_marginBottom="15dp"
                android:textSize="@dimen/first_item"
                />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/groceryQty"
                android:text="@string/save_title"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textSize="@dimen/first_item"
                />

        </RelativeLayout>





    </android.support.v7.widget.CardView>
</LinearLayout>